# libazdice

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  cbindgen.toml
.cargo/: config
az-dice-distributions-demo/: Cargo.toml
az-dice-distributions-demo/src/: main.rs
az-dice-rolls-demo/: Cargo.toml
az-dice-rolls-demo/src/: main.rs
c-az-dice-demo/: README.md  rust_caller.c  rust_caller_dynamic_loading.c
externalise/: rust_caller.c  rust_caller0.c
include/: libazdice.h
lib-azdice/src/: distribution.rs  lib.rs  parse.rs
src/: distribution.rs  externalise.rs  lib.rs  parse.rs  tests.rs
