[package]
name = "libazdice"
version = "0.2.3"
authors = ["alesha <aleshaleksey>"]
edition = "2018"

# Should be compiled with "cargo rustc --release -- -C link-args=-s" if aiming for cdylib.
[lib]
name = "azdice"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
