[package]
name = "libazdice"
version = "0.2.4"
authors = ["Aleksey Zholobenko <aleshaleksey@googlemail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug = false

# Should be compiled with "cargo rustc --release -- -C link-args=-s" if aiming for cdylib.
[lib]
name = "libazdice"
path = "src/lib.rs"
crate-type = ["lib", "cdylib","staticlib"]
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
